--- a/Projet_S5_copie/Projet_S5/ramassage.htm
+++ b/Projet_S5_copie/Projet_S5/ramassage.htm
@@ -21,6 +21,7 @@
             <li><a href="ramassage.htm">Ramassage</a></li>
             <li><a href="liste.html">liste des livraison</a></li>
             <li><a href="ville_tarif.html">liste des tarifs</a></li>
+            <li><a href="statut.html">Statut</a></li>
             <li><a href="#">Déconnexion</a></li>
         </ul>
     </div>
