--- a/Projet_S5_copie/Projet_S5/liste.html
+++ b/Projet_S5_copie/Projet_S5/liste.html
@@ -17,6 +17,7 @@
             <li><a href="ramassage.htm">Ramassage</a></li>
             <li><a href="liste.html">Liste des livraisons</a></li>
             <li><a href="ville_tarif.html">Liste des tarifs</a></li>
+            <li><a href="statut.html">Statut</a></li>
             <li><a href="#">Déconnexion</a></li>
         </ul>
     </div>
@@ -25,6 +26,7 @@
         <table id="dataTable">
             <thead>
                 <tr>
+                    <th>Code</th>
                     <th>Ville ramassage</th>
                     <th>Ville client</th>
                     <th>Type livraison</th>
