--- a/Projet_S5_copie/Projet_S5/liste.html
+++ b/Projet_S5_copie/Projet_S5/liste.html
@@ -38,6 +38,7 @@
                     <th>Adresse</th>
                     <th>Produit</th>
                     <th>Date</th>
+                    <th colspan="2">Actions</th>
                 </tr>
             </thead>
             <tbody>
