--- a/Projet_S5_copie/Projet_S5/connexion.html
+++ b/Projet_S5_copie/Projet_S5/connexion.html
@@ -23,6 +23,8 @@
       <button id="logoutBtn">Se déconnecter</button>
     </div>
   </div>
+
+  <script src="connexion.js"></script>
 </body>
 </html>
 <style>
