--- a/Projet_S5_copie/Projet_S5/liste.html
+++ b/Projet_S5_copie/Projet_S5/liste.html
@@ -12,13 +12,14 @@
         </div>
         <h3>Menu</h3>
         <ul>
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="ajouter.html">Ajouter une colis</a></li>
             <li><a href="ramassage.htm">Ramassage</a></li>
             <li><a href="liste.html">Liste des livraisons</a></li>
+            <li><a href="modifier.html">Modifier</a></li>
             <li><a href="ville_tarif.html">Liste des tarifs</a></li>
             <li><a href="statut.html">Statut</a></li>
-            <li><a href="#">Déconnexion</a></li>
+            <li><a href="deconnexion.html">Déconnexion</a></li>
         </ul>
     </div>
 
@@ -38,7 +39,6 @@
                     <th>Adresse</th>
                     <th>Produit</th>
                     <th>Date</th>
-                    <th colspan="2">Actions</th>
                 </tr>
             </thead>
             <tbody>
