--- a/Projet_S5_copie/Projet_S5/ramassage.htm
+++ b/Projet_S5_copie/Projet_S5/ramassage.htm
@@ -16,13 +16,14 @@
         
         <h3>Menu</h3>
         <ul>
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="ajouter.html">ajouter une colie</a></li>
             <li><a href="ramassage.htm">Ramassage</a></li>
             <li><a href="liste.html">liste des livraison</a></li>
+            <li><a href="modifier.html">Modifier</a></li>
             <li><a href="ville_tarif.html">liste des tarifs</a></li>
             <li><a href="statut.html">Statut</a></li>
-            <li><a href="#">Déconnexion</a></li>
+            <li><a href="deconnexion.html">Déconnexion</a></li>
         </ul>
     </div>
     <form id="ramassage">
