--- a/Projet_S5_copie/Projet_S5/statut.html
+++ b/Projet_S5_copie/Projet_S5/statut.html
@@ -13,13 +13,14 @@
         
         <h3>Menu</h3>
         <ul>
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="ajouter.html">Ajouter un colis</a></li>
             <li><a href="ramassage.html">Ramassage</a></li>
             <li><a href="liste.html">Liste des livraisons</a></li>
+            <li><a href="modifier.html">Modifier</a></li>
             <li><a href="ville_tarif.html">Liste des tarifs</a></li>
             <li><a href="statut.html">Statut</a></li>
-            <li><a href="#">Déconnexion</a></li>
+            <li><a href="deconnexion.html">Déconnexion</a></li>
         </ul>
     </div> 
 
